--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <input type="text" id="name" placeholder="Name"><br><br>
     <input type="email" id="email" placeholder="Email"><br><br>
     <input type="text" id="add" placeholder="Address"><br><br>
-<button onclick="getUser()">Get</button><br><br>
+<button onclick="getUser()">Submit</button><br><br>
 <button onclick="editUser()">Edit</button><br><br>
 <button onclick="delUser()">Delete</button><br><br>
 
